# pan-kontaktliste

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  README.md  excel_reader.py  gui.py  pyproject.toml  render.py  requirements-dev.txt  requirements.txt  version.py
.github/workflows/: build-windows.yml  commitlint.yml  pre-commit.yml  release-please.yml  tests.yml
template/: contact_list.html.j2
tests/: __init__.py  conftest.py  test_excel_reader.py  test_render.py  test_version.py
